[BE-024] Publicar ruta
